# data-ai-dev

./: .gitignore  .python-version  AGENTS.md  README.md  myray-image.sh  ray-deploy.md  requirements.txt  tutorials.ipynb
.devcontainer/: devcontainer.json
daft/: daft_hands_on.ipynb  daft_ray_job.py  daft_ray_lance.ipynb  pyproject.toml  requirements.txt
daft-dev/: daft_demo.ipynb  requirements.txt
gemma4-setup/: GENERATION_PERF_26B.md  LMS_256K_CONFIG_SUMMARY.md  LMS_OPENAI_COMPATIBILITY.md  README.md  generation_tests.py  start_lms_256k.sh  test_context_window.py  test_openai_sdk.py
lancedb/: .gitignore  README.md  lancedb_demo.ipynb  perf_comp.py  perf_comp_text.py  perf_comp_ubm.py  perf_comp_vector.py  pylance_basics.ipynb  pyproject.toml  quick_ubm_reader.py  read_ubm_data.py  read_ubm_lance.py  requirements.txt
lancedb-dev/: lancedb_demo.ipynb  lancedb_embed.ipynb  requirements.txt
lancedb/text_results/: compression_results.json
lancedb/ubm_data/: lock.mdb
lancedb/ubm_results/: results.json  ubm_compression_results.json
lancedb/vector_results/: vector_compression_results.json
neug-setup/: NEUG_SETUP_REPORT.md  README.md  SETUP_SUMMARY.txt  test_basic_graph.py  test_json_extension.py  test_parquet_extension.py
nvidia-dali/: ho-01.ipynb  requirements.txt
pandasai/: llm.py  pandasai_qwen.ipynb  pyproject.toml  requirements.txt
ray/: README.md  default-values.yaml  my_app.py  myvalues.yaml  pyproject.toml  requirements.txt  values-ack.yaml  values.yaml
ray-dev/: README.md  check_requests_ver.py  tutorials.ipynb  values.aarch64.yaml
weaviate/: pyproject.toml  weaviate_demo_ollama.ipynb
weaviate-dev/: weaviate_demo_ollama.ipynb
weaviate-dev/goclient/: droplet_schema.json  main.go
weaviate/goclient/: atom_schema.json  go.mod  go.sum  main.go
