[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lancedb-project"
version = "0.1.0"
description = "LanceDB project with vector search capabilities"
requires-python = ">=3.8"
dependencies = [
    "lancedb",
    "datasets",
    "ipykernel",
    "ollama",
    "sentence_transformers",
    "pandas",
    "pylance",
    "pyarrow",
    "duckdb>0.8",
    "lmdb (>=1.7.2,<2.0.0)",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "notebook",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "test*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88 