[project]
name = "pandasai-dev"
version = "0.1.0"
description = ""
authors = [
    {name = "xiaming.cxm",email = "xiaming.cxm@alibaba-inc.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "plotly (>=6.2.0)",
    "faker (>=19.12.0)",
    "pandasai (>=3.0.0b19)",
    "pandasai-openai (>=0.1.4)",
    "matplotlib (>=3.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
