[tool.poetry]
name = "pandasai-dev"
version = "0.1.0"
description = ""
authors = ["xiaming.cxm <xiaming.cxm@alibaba-inc.com>"]
readme = "README.md"
packages = [{include = "pandasai_dev"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
plotly = ">=6.2.0"
faker = ">=19.12.0"
pandasai = ">=3.0.0b19"
pandasai-openai = ">=0.1.4"
matplotlib = ">=3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
