[tool.poetry]
name = "ray-dev"
version = "0.1.0"
description = ""
authors = ["xiaming.cxm <xiaming.cxm@alibaba-inc.com>"]
readme = "README.md"
packages = [{include = "ray_dev"}]

[tool.poetry.dependencies]
python = ">=3.10"
ray = {extras = ["client"], version = "==2.44.1"}
numpy = ">=1.22,<2.0"
scipy = ">=1.7,<=1.11"
ipywidgets = ">=8.1.7,<9.0.0"
ipykernel = ">=6.29.5,<7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
