[tool.poetry]
name = "weaviate-dev"
version = "0.1.0"
description = ""
authors = ["xiaming.cxm <xiaming.cxm@alibaba-inc.com>"]
readme = "README.md"
packages = [{include = "weaviate_dev"}]

[tool.poetry.dependencies]
python = ">=3.11"
weaviate-client = ">=4.16.1,<5.0.0"
ipykernel = ">=6.29.5,<7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
